# CS1410_midterm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TERMINAL_WIDTHS.h  c_cpp_properties.json
.github/workflows/: cmake-multi-platform.yml
inc/: StudentRecord.h  class_record.h  display.h  helper_functions.h  professor_record.h  record.h  student_record.h  types.h
src/: class_record.cpp  display.cpp  main.cpp  student_record.cpp
test/: CMakeLists.txt  midterm_test.cpp
